Refactored bottomsheet design architecture. converted to mvp pattern. also added unit test. Tests need furture work